--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -14,6 +14,10 @@
     font-size: 400%;
 }
 
+.loading {
+    font-size: 200%;
+}
+
 .signupButton {
     height: 50px;
     width: 200px;
@@ -24,25 +28,4 @@
     height: 50px;
     width: 200px;
     margin-top: 5px;
-}
-
-.cardWrapper {
-    width: 20vw;
-    height: 50vh;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20vh;
-}
-
-.userForm {
-    margin-bottom: 15px;
-}
-
-.passForm {
-    margin-bottom: 15px;
-}
-
-.headers {
-    text-align: left;
-    float: left;
 }
