--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,5 +1,6 @@
-.row {
+.home {
     display: flex;
+    width: 100vw;
 }
 
 .col1 {
@@ -9,7 +10,7 @@
 .col2 {
     flex: 25vw;
 }
-
+ 
 .standings {
     padding-top: 10px;
     padding-right: 20px;
@@ -24,4 +25,8 @@
     text-align: left;
     font-size: larger;
     font-weight: 700;
+}
+
+.homeContent {
+    
 }
