--- a/client/src/css/PostForm.css
+++ b/client/src/css/PostForm.css
@@ -1,8 +1,6 @@
 .formWrapper {
-    text-align: center;
-    width: 75vw;
+    width: 100%;
     text-align: left;
-    margin: auto;
 }
 
 .titleForm {
