--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,6 +1,7 @@
 .home {
     display: flex;
     width: 100vw;
+    overflow-y: scroll;
 }
 
 .col1 {
@@ -10,24 +11,26 @@
 
 .col2 {
     flex: 25vw;
+    overflow-x: hidden;
 }
  
-.standings {
-    padding-top: 10px;
-    padding-right: 20px;
+.feedHeader {
+    margin-top: 5px;
+    width: 100%;
+    display: flex;
 }
 
-.leftalign {
-    text-align: left;
+.feedTitle {
+    font-size: xx-large;
+    width: 22%;
+    margin-left: 10px;
 }
 
-.ls {
-    padding-top: 10px;
-    text-align: left;
-    font-size: larger;
-    font-weight: 700;
+.postButtonWrapper {
+    width: 78%;
+    margin-top: 10px;
+    text-align: right;
+    margin-right: 10px;
 }
 
-.homeContent {
-    
-}
+
