--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100vw;
     overflow-y: scroll;
+    background-color: rgb(240, 240, 240);
 }
 
 .col1 {
@@ -16,21 +17,23 @@
  
 .feedHeader {
     margin-top: 5px;
-    width: 100%;
+    width: 98%;
     display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(0,0,0,.125);
 }
 
 .feedTitle {
     font-size: xx-large;
     width: 22%;
-    margin-left: 10px;
 }
 
 .postButtonWrapper {
     width: 78%;
     margin-top: 10px;
     text-align: right;
-    margin-right: 10px;
 }
 
 
