--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -35,3 +35,10 @@
     margin-top: 10px;
     margin-left: 3px;
 }
+
+.userCharCounter {
+    margin-left: 1%;
+    margin-top: 2%;
+    color: rgb(117, 117, 117);
+    font-size: small;
+}
