--- a/client/src/css/Comment.css
+++ b/client/src/css/Comment.css
@@ -13,7 +13,7 @@
 }
 
 .charCount {
-    color: rgb(117, 117, 117);
+    color: rgb(150, 150, 150);
     font-size: small;
 }
 
@@ -22,12 +22,12 @@
     color: white;
     width: 8%;
     height: 2rem;
-    background-color: rgb(150, 150, 150);
+    background-color: rgb(117, 117, 117);
     border: none;
     border-radius: .25rem;
 }
 .commentButton:hover {
-    background-color: rgb(117, 117, 117);
+    background-color: rgb(92, 92, 92);
 }
 
 .commentAlert {
@@ -60,8 +60,12 @@
 .commentWrapper {
     width: 100%;
     margin-top: 2%;
-    background: linear-gradient(to right, rgb(43, 160, 255) 0.3%, white 0.3%);
+    background-color: rgb(58, 58, 58);
+    background: linear-gradient(to right, #ffd257 0.3%, rgb(58, 58, 58) 0.3%);
     overflow-x: hidden;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-radius: .1rem;
 }
 
 .commentTop {
@@ -70,7 +74,7 @@
 
 .commentAuthor {
     width: 50%;
-    color: rgba(150, 150, 150);
+    color: rgb(150, 150, 150);
     margin-left: 1%;
 }
 
@@ -78,9 +82,9 @@
     width: 50%;
     text-align: right;
     color: rgba(150, 150, 150);
+    margin-right: 1%;
 }
 
 .commentText {
     margin-left: 1%;
-    /* width: 100%; */
 }
