--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -21,17 +21,20 @@
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 10px;
-    border-bottom: 1px solid rgba(0,0,0,.125);
+    border-bottom: 0.25rem solid #ffd257;    
 }
 
 .feedTitle {
+    margin-top: auto;
+    margin-bottom: auto;
     font-size: xx-large;
     width: 22%;
 }
 
 .postButtonWrapper {
     width: 78%;
-    margin-top: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
     text-align: right;
 }
 
