--- a/client/src/css/PostForm.css
+++ b/client/src/css/PostForm.css
@@ -15,13 +15,13 @@
     color: white;
     height: 2.5rem;
     width: 15%;
-    background-color: rgb(43, 160, 255);
+    background-color: #1e96ff;
     border: none;
     border-radius: .25rem;
     margin-right: 0.5%;
 }
 .submitButton:hover {
-    background-color: rgb(4, 121, 218);
+    background-color: #0073d8;
 }
 
 .cancelButton {
@@ -62,6 +62,6 @@
 }
 
 .charCounter {
-    color: rgb(117, 117, 117);
+    color: rgb(150, 150, 150);
     font-size: small;
 }
