--- a/client/src/css/TeamPage.css
+++ b/client/src/css/TeamPage.css
@@ -1,11 +1,11 @@
 .teamPageWrapper {
     text-align: left;
     width: 100vw;
-    padding-bottom: 10%;
+    padding-bottom: 3%;
 }
 
 .backButton {
-    margin-top: 5vh;
+    margin-top: 3%;
     margin-left: 10%;
     color: white;
     height: 2.5rem;
@@ -23,13 +23,14 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 2%;
+    margin-bottom: 1%;
 }
 
 .teamPage {
     display: flex;
     flex-wrap: wrap;
     width: 80%;
-    background-color: white;
+    background-color: rgb(39, 39, 39);
     margin-left: auto;
     margin-right: auto;
     border-radius: .25rem;
@@ -39,7 +40,7 @@
     display: flex;
     width: 100%;
     overflow: hidden;
-    margin-top: 1%;
+    margin-top: 2%;
     margin-left: 1%;
 }
 
@@ -57,6 +58,10 @@
     font-size: xx-large;
 }
 
+.nameAbb {
+    color: rgb(150, 150, 150);
+}
+
 .teamContent {
     margin-top: 2%;
     margin-left: 1%;
@@ -64,15 +69,16 @@
 
 .rosterTitle {
     font-size: x-large;
+    margin-top: 1%;
 }
 
 .roster {
     display: flex;
     width: 100%;
-    border-top: 2px solid rgb(43, 160, 255);
+    border-top: .2rem solid rgb(43, 160, 255);
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 1%;
+    padding-bottom: 2%;
 }
 
 .position {
@@ -82,7 +88,7 @@
 .teamAbb {
     font-size: small;
     font-weight: 500;
-    color: grey;
+    color: rgb(150, 150, 150);
 }
 
 .player {
