--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -15,12 +15,12 @@
 }
  
 .feedHeader {
-    margin-top: 5px;
+    margin-top: 1%;
     width: 98%;
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 10px;
+    padding-bottom: 1%;
     border-bottom: 0.25rem solid #ffd257;    
 }
 
