--- a/client/src/css/SideStandings.css
+++ b/client/src/css/SideStandings.css
@@ -1,7 +1,7 @@
 .standingsWrapper {
     width: 98%;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 3%;
+    margin-bottom: 3%;
     border-radius: .25rem;
     /* background: linear-gradient(to bottom, rgb(43, 160, 255) 1%, rgb(39, 39, 39) 1%); */
     background-color: rgb(39, 39, 39);
@@ -28,18 +28,18 @@
 .thTeam {
     padding-left: 2%;
     border-bottom: black;
-    padding-top: 5px;
+    padding-top: 2%;
 }
 
 .thW {
     text-align: center;
-    padding-top: 5px;
+    padding-top: 2%;
 }
 
 .thL {
     text-align: center;
     padding-right: 2%;
-    padding-top: 5px;
+    padding-top: 2%;
 }
 
 .tbody {
@@ -55,19 +55,19 @@
 
 .tdTeam {
     padding-left: 2%;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .tdW {
     text-align: center;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .tdL{
     text-align: center;
     padding-right: 2%;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
