--- a/client/src/css/SideStandings.css
+++ b/client/src/css/SideStandings.css
@@ -3,9 +3,14 @@
     margin-top: 3%;
     margin-bottom: 3%;
     border-radius: .25rem;
-    /* background: linear-gradient(to bottom, rgb(43, 160, 255) 1%, rgb(39, 39, 39) 1%); */
     background-color: rgb(39, 39, 39);
     border: .1rem solid rgb(122, 122, 122);
+}
+
+.loadingStandings {
+    margin-top: 2%;
+    margin-left: 2%;
+    font-size: 150%;
 }
 
 .lsHeader {
