--- a/client/src/css/PostPreview.css
+++ b/client/src/css/PostPreview.css
@@ -6,8 +6,9 @@
     background-color: rgb(39, 39, 39);
     border: .1rem solid rgb(122, 122, 122);
 }
+
 .previewWrapper:hover {
-    /* background: linear-gradient(to left, #a357ff 0.8%, rgb(53, 53, 53) 0.8%); */
+    background: linear-gradient(to right, #ffd257 0.5%, rgb(53, 53, 53) 0.5%);
     background-color: rgb(53, 53, 53);
     cursor: pointer;
 }
