--- a/client/src/css/PostList.css
+++ b/client/src/css/PostList.css
@@ -18,7 +18,7 @@
     margin-top: 2%;
     display: flex;
     justify-content: center;
-    color: rgb(0, 91, 211);
+    color: #1e96ff;
 }
 
 .prev:hover {
