--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -1,13 +1,30 @@
-.landing {
-    width: 100vw;
-    height: 100vh;
+.landingWrapper {
+    width: 100%;
+    height: 100%;
     overflow-y: hidden;
     overflow-x: hidden;
-    text-align: center;
 }
 
-.landingMargin {
-    margin-top: 5%;
+.landingTicker {
+    height: 5%;
+    font-size: 150%;
+}
+
+.tickerHeading {
+    text-align: center;
+    width: fit-content;
+    font-style: italic;
+    font-size: 120%;
+    font-weight: 700;
+    background-color: rgb(196, 0, 0);
+    padding-left: 0.5%;
+    padding-right: 0.5%;
+}
+
+.landingPage {
+    width: 100%;
+    height: 95%;
+    text-align: center;
 }
 
 .title {
@@ -16,6 +33,7 @@
 
 .loading {
     font-size: 200%;
+    text-align: center;
 }
 
 .signupButton {
@@ -27,6 +45,7 @@
     border: none;
     border-radius: .25rem;
 }
+
 .signupButton:hover {
     background-color: rgb(126, 126, 126);
 }
@@ -40,19 +59,7 @@
     border: none;
     border-radius: .25rem;
 }
+
 .loginButton:hover {
     background-color: #0073d8;
-}
-
-.warning {
-    color: red;
-    margin-top: 10px;
-    margin-left: 3px;
-}
-
-.userCharCounter {
-    margin-left: 1%;
-    margin-top: 2%;
-    color: rgb(117, 117, 117);
-    font-size: small;
 }
