--- a/client/src/css/PostList.css
+++ b/client/src/css/PostList.css
@@ -51,3 +51,16 @@
 .postButton:hover {
     background-color: #0073d8;
 }
+
+.noPosts {
+    padding-top: 1%;
+    padding-bottom: 1%;
+    text-align: center;
+    font-style: italic;
+    width: 100%;
+    margin-bottom: 1%;
+    border-radius: .25rem;
+    background-color: white;
+    background-color: rgb(39, 39, 39);
+    border: .1rem solid rgb(122, 122, 122);
+}
