--- a/client/src/css/PostPreview.css
+++ b/client/src/css/PostPreview.css
@@ -8,7 +8,7 @@
 }
 
 .previewWrapper:hover {
-    background: linear-gradient(to right, #ffd257 0.5%, rgb(53, 53, 53) 0.5%);
+    background: linear-gradient(to right, #9E4CEC 0.5%, rgb(53, 53, 53) 0.5%);
     background-color: rgb(53, 53, 53);
     cursor: pointer;
 }
