--- a/client/src/css/SideStandings.css
+++ b/client/src/css/SideStandings.css
@@ -54,8 +54,9 @@
 .trTeam {
     cursor: default;
 }
+
 .trTeam:hover {
-    background: linear-gradient(to right, #a357ff 0.8%, rgb(53, 53, 53) 0.8%); 
+    background: linear-gradient(to right, #9E4CEC 0.8%, rgb(53, 53, 53) 0.8%);
 }
 
 .tdTeam {
@@ -70,7 +71,7 @@
     padding-bottom: 2%;
 }
 
-.tdL{
+.tdL {
     text-align: center;
     padding-right: 2%;
     padding-top: 2%;
