--- a/client/src/css/Comment.css
+++ b/client/src/css/Comment.css
@@ -26,6 +26,7 @@
     border: none;
     border-radius: .25rem;
 }
+
 .commentButton:hover {
     background-color: rgb(92, 92, 92);
 }
@@ -64,25 +65,26 @@
     background: linear-gradient(to right, #ffd257 0.3%, rgb(58, 58, 58) 0.3%);
     overflow-x: hidden;
     padding-top: 1%;
-    padding-bottom: 1%;
+    padding-bottom: 0.5%;
     border-radius: .1rem;
-}
-
-.commentTop {
     display: flex;
 }
 
+.commentContent {
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 90%;
+}
+
 .commentAuthor {
-    width: 50%;
+    width: fit-content;
     color: rgb(150, 150, 150);
     margin-left: 1%;
 }
 
-.commentDate {
-    width: 50%;
-    text-align: right;
-    color: rgba(150, 150, 150);
-    margin-right: 1%;
+.commentAuthor:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 .commentText {
@@ -98,6 +100,14 @@
     color: rgb(150, 150, 150);
     width: fit-content;
 }
+
+.commentDate {
+    width: 10%;
+    text-align: right;
+    margin-right: 1%;
+    color: rgba(150, 150, 150);
+}
+
 .commentDelete:hover {
     text-decoration: underline;
     cursor: pointer;
