--- a/client/src/css/ShowProfile.css
+++ b/client/src/css/ShowProfile.css
@@ -1,6 +1,15 @@
 .spWrapper {
     width: 100%;
     overflow-x: hidden;
+    display: flex;
+}
+
+.pCol1 {
+    width: 60%;
+}
+
+.pCol2 {
+    width: 40%;
 }
 
 .spLoading {
@@ -26,60 +35,57 @@
 }
 
 .spHeader {
-    width: 95%;
+    margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1%;
+    width: 93.1%;
+}
+
+.spUsername {
+    width: fit-content;
+    font-size: 300%;
+    border-bottom: 0.2rem solid rgb(122, 122, 122);
 }
 
 .spDates {
+    padding-left: 1%;
+    border-left: 0.2rem solid #9E4CEC;
+    margin-top: 1.5%;
     font-size: 100%;
     color: rgb(150, 150, 150);
 }
 
-.spUsername {
-    font-size: 300%;
-}
-
 .spBio {
     overflow-x: hidden;
-    width: 35%;
+    width: 95%;
     font-size: 110%;
     margin-top: 1%;
 }
 
-.spPC {
-    display: flex;
+.spPosts {
     width: 95%;
-    margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
-}
-
-.spPosts {
-    width: 49.5%;
-    background-color: rgb(39, 39, 39);
-    border: .2rem solid rgb(122, 122, 122);
-    border-radius: .25rem;
-    overflow-x: hidden;
-    padding-bottom: 1%;
+    margin-top: 1%;
 }
 
 .spComments {
-    width: 49.5%;
-    background-color: rgb(39, 39, 39);
-    border: .2rem solid rgb(122, 122, 122);
-    border-radius: .25rem;
+    width: 98%;
     overflow-x: hidden;
-    margin-left: 1%;
-    padding-bottom: 1%;
 }
 
-.spTitle {
+.spPostsTitle {
     margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
     font-size: 150%;
-    width: 96%;
+    width: 98%;
+    border-bottom: 0.1rem solid rgb(122, 122, 122);
+}
+
+.spCommentsTitle {
+    margin-top: 1%;
+    font-size: 150%;
+    width: 100%;
     border-bottom: 0.1rem solid rgb(122, 122, 122);
 }
